# Runnables

./: Agents.py  Agents_cr.py  main.py  newssummarizer.py  owntool.py  parallelrunnable.py  pyproject.toml  runnablepassthrough.py  sequencerunnable.py  toolcalling.py
