[project]
name = "runnables"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-mistralai>=1.1.4",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
